fix overflow bug

--- a/src/css/_utility/_utilities.scss
+++ b/src/css/_utility/_utilities.scss
@@ -271,3 +271,6 @@
 .flex-zero{
   flex: 0 0 auto!important
 }
+.overflow-hidden{
+  overflow: hidden;
+}
